--- a/admissions_analysis.Rmd
+++ b/admissions_analysis.Rmd
@@ -10,7 +10,8 @@ output:
 # Setup
 
 ## Load Packages
-```{r setup, include=FALSE}
+
+```{r setup}
 if (!require("pacman")) install.packages("pacman")
 pacman::p_load(tidyverse)
 ```
